clusters/homelab/apps/blog/blog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo-blog-deployment
  namespace: default
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: hugo-blog
          image: ghcr.io/pflorov/devops-blog:96150be3ba9faa07ed4c456dfe17500850e11404
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
