clusters/homelab/apps/blog/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo-blog-service
spec:
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http-blog
  type: ClusterIP
